--- a/landing-page/css/styles.css
+++ b/landing-page/css/styles.css
@@ -1,4 +1,7 @@
-
+@font-face {
+    font-family: Bebas-Neue;
+    src: url(../assets/BebasNeue-Regular.ttf);
+}
 /* reset de margin */
 *{
     margin: 0;
@@ -13,13 +16,15 @@
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    border: 1px solid greenyellow;
+    /* border: 5px solid greenyellow; */
 }
 /*  */
-.header-flex{
+header .header-flex{
     display: flex;
-    justify-content: end;
     align-items: center;
+    height: 100%;
+    justify-content: flex-end;
+    border: 1px solid greenyellow;
 }
 
 /* Header / cabeçalho */
@@ -29,16 +34,21 @@ header {
     height: 60px;
     background-color: #F9003D;
     align-items: center;
+    justify-content: flex-end;
 }
 
 header nav{
     display: flex;
     width: 600px;
-    border: 3px solid black;   
+    /* border: 3px solid black;    */
     justify-content: space-between; 
 }
 
 header nav a{
-    display: inline;
-
+    color: white;
+    font-size: 18px;
+    text-transform: uppercase;
+    text-decoration-line: none;
+    font-family: sans-serif;
+    
 }
