--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,17 @@ header #menu-mobile {
     display: none;
 }
 
+#logotipo {
+    position: relative;
+    right: 345px;
+    top: 20px;
+    width:200px ;
+    height: 60px ;
+    padding: 5px;
+    border: 2px dashed grey;
+    transform: rotate(-10deg);
+}
+
 
 
 
@@ -285,11 +296,25 @@ section .paragrafo {
 
     header #menu-mobile {
         display: block;
+
     }
 
     header {
         position: fixed;
     }
+
+    #logotipo {
+        position: relative;
+        z-index: 10;
+        right: 150px;
+        top: 15px;
+        width:150px ;
+        height: 60px ;
+        padding: 5px;
+        border: 2px dashed grey;
+        transform: rotate(-5deg);
+    } 
+    
 
     header nav {
         z-index: 5;
